--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"start_client": "vite",
-		"start_server": "node server.js",
+		"start_server": "nodemon server.js",
 		"dev": "concurrently 'npm run start_server' 'npm run start_client'",
 		"build": "tsc -b && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-use-websocket": "^4.8.1",
 		"ws": "^8.18.0"
 	},
 	"devDependencies": {
@@ -26,6 +27,7 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"nodemon": "^3.1.4",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.4"
 	}
